# robust-matching

./: .gitignore  CMakeLists.txt  README.md  probablity_test.py  temp.argos  tmp  tmp_log.json  tmplog.json
automatic_experiments/: algorithms.py  plot.py  probablity_test.py  process_logs.py  requirements.txt  run_experiments.py  temp  template.argos  test_experiment.py
automatic_experiments/plot/: calc_graph_diameter.py  expected_number_of_pairs_commited.py  plot.py  plot2.py  plot_all.py  plot_function.py  plot_number_of_pairs.py  plot_pair_time_distribution.py  t_test.py
automatic_experiments/results/VirtualForces/faulty0/: random_seedNone.argos
automatic_experiments/results/VirtualForces/faulty10/: random_seed20.argos
automatic_experiments/results/commited/faulty0/: random_seed2.argos
automatic_experiments/results_old/virtual_forces/faulty0/: random_seed2.argos
automatic_experiments/results_old2/range_0.3_robots_10/algo_matching_algo_matching_walk_away/: metadata.json
automatic_experiments/results_old2/range_0.3_robots_10/algo_matching_crash/: metadata.json
automatic_experiments/results_old2/range_0.3_robots_10/algo_matching_keep_distance/: metadata.json
automatic_experiments/results_old2/range_0.3_robots_10/algo_matching_virtual_forces_walk_away/: metadata.json
automatic_experiments/results_old2/range_0.3_robots_10/virtual_forces_algo_matching_walk_away/: metadata.json
automatic_experiments/results_old2/range_0.3_robots_10/virtual_forces_crash/: metadata.json
automatic_experiments/results_old2/range_0.3_robots_10/virtual_forces_keep_distance/: metadata.json
automatic_experiments/results_old2/range_0.3_robots_10/virtual_forces_random_algo_matching_walk_away/: metadata.json
automatic_experiments/results_old2/range_0.3_robots_10/virtual_forces_random_crash/: metadata.json
automatic_experiments/results_old2/range_0.3_robots_10/virtual_forces_random_keep_distance/: metadata.json
automatic_experiments/results_old2/range_0.3_robots_10/virtual_forces_random_virtual_forces_walk_away/: metadata.json
automatic_experiments/templates/: matching.argos  matching_notinuse.argos  virtual_forces.argos
src/controllers/: CMakeLists.txt
src/controllers/abstract_controllers/: CMakeLists.txt  base_controller.cpp  base_controller.h  crash_controller.cpp  crash_controller.h
src/controllers/adverserial/: CMakeLists.txt
src/controllers/adverserial/opposite_direction/: CMakeLists.txt  opposite_direction.cpp  opposite_direction.h
src/controllers/adverserial_opposite_direction/: CMakeLists.txt
src/controllers/forces_moving/: CMakeLists.txt  forces_moving.cpp  forces_moving.h
src/controllers/meeting_points/: CMakeLists.txt  greedy_meeintg_points.cpp  greedy_meeting_points.h  meeting_points.cpp  meeting_points.h  meeting_points_epuck.cpp  meeting_points_epuck.h
src/controllers/meeting_points/distributed/: greedy_meeintg_points.cpp  greedy_meeting_points.h  nieberg.cpp  nieberg.h
src/controllers/meeting_points/distributed/adverserial/: walk_away.cpp  walk_away.h
src/controllers/move_to_point/: CMakeLists.txt  move_to_point.cpp  move_to_point.h
src/controllers/robust_matching/: CMakeLists.txt  matching_regular_bot.cpp  matching_regular_bot.h  robust_matching.cpp  robust_matching.h
src/controllers/robust_matching/opposite_direction/: opposite_direction.cpp  opposite_direction.h
src/controllers/triplet/: CMakeLists.txt
src/controllers/triplet/forces/: triplet_forces.cpp  triplet_forces.h
src/controllers/virtual_forces/: CMakeLists.txt  keep_distance.cpp  keep_distance.h  virtual_forces_adverserial.cpp  virtual_forces_adverserial.h  virtual_forces_bot.cpp  virtual_forces_bot.h  virtual_forces_random.cpp  virtual_forces_random.h
src/experiments/: 1_faults.argos  break_nf_pair.argos  greedy_meeting_points_test.argos  meeting_points_epuck_test.argos  meeting_points_test.argos  neiberg_test.argos  no_faults.argos  no_faults_large_map.argos  simple.argos  triplet_forces.argos
src/experiments/automatic_experiments/: process_logs.py  run_experiments.py  template.argos  test_experiment.py
src/experiments/line/: no_faults.argos
src/experiments/random/: 10_faults.argos  10_faults_commited_matching.argos  10_faults_large_map.argos  1_faults.argos  5_faults.argos  no_faults.argos  no_faults_large_map.argos
src/experiments/star/: no_faults.argos
src/experiments/virtual_forces/: 10_faults.argos  2_robots.argos
src/loop_functions/: CMakeLists.txt
src/loop_functions/basic_loop_functions/: CMakeLists.txt  basic_loop_functions.cpp  basic_loop_functions.h  basic_qt_user_functions.cpp  basic_qt_user_functions.h
src/loop_functions/commited_matching_loop_functions/: CMakeLists.txt  commited_matching_loop_functions.cpp  commited_matching_loop_functions.h
src/loop_functions/greedy_meeting_points_loop_functions/: CMakeLists.txt  greedy_meeting_points_loop_functions.cpp  greedy_meeting_points_loop_functions.h  neiberg_loop_functions.cpp  neiberg_loop_functions.h
src/loop_functions/iterated_meeting_points/: iterated_meeting_points.cpp  iterated_meeting_points.h
src/loop_functions/iterated_meeting_points_loop_functions/: CMakeLists.txt  iterated_meeting_points_epuck_loop_functions.cpp  iterated_meeting_points_epuck_loop_functions.h  iterated_meeting_points_loop_functions.cpp  iterated_meeting_points_loop_functions.h
src/loop_functions/matching_loop_functions/: CMakeLists.txt  CMakeLists22.txt  matching_loop_functions.cpp  matching_loop_functions.h  matching_qt_user_functions.cpp  matching_qt_user_functions.h
src/loop_functions/matching_result/: CMakeLists.txt  matching_result.cpp  matching_result.h
src/loop_functions/minimum_cost_perfect_matching/: CMakeLists.txt  Example.cpp  Globals.h  Graph.cpp  Graph.h  a.out  input.txt
src/loop_functions/moving_forces_loop_function/: CMakeLists.txt  moving_forces_loop_function.cpp  moving_forces_loop_function.h
src/loop_functions/print_experiment_loop_fuctions/: CMakeLists.txt  print_experiment_loop_fuctions.cpp  print_experiment_loop_fuctions.h
(+3554 files in other folders)
