link_directories(${CMAKE_BINARY_DIR}/src/controllers/robust_matching)
set(greedy_meeting_points_loop_functions_SOURCES greedy_meeting_points_loop_functions.cpp neiberg_loop_functions.cpp)

add_library(greedy_meeting_points_loop_functions SHARED ${greedy_meeting_points_loop_functions_SOURCES})
target_link_libraries(greedy_meeting_points_loop_functions
  abstract_controllers
  print_experiment_loop_fuctions
  robust_matching
  meeting_points
  minimum_cost_perfect_matching
  matching_result
  argos3core_simulator
  argos3plugin_simulator_dynamics2d
  argos3plugin_simulator_entities
  argos3plugin_simulator_footbot
  argos3plugin_simulator_genericrobot
  argos3plugin_simulator_media)

if(ARGOS_QTOPENGL_FOUND)
  target_link_libraries(greedy_meeting_points_loop_functions argos3plugin_simulator_qtopengl)
endif(ARGOS_QTOPENGL_FOUND)
